目录结构调整

--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -51,7 +51,7 @@ for (int i = 0; i < len; i++) {
 
 - 当快指针走完整个数组后，慢指针当前的坐标加1就是数组中不同数字的个数
 
-![26.remove-duplicates-from-sorted-array](./assets/26.remove-duplicates-from-sorted-array.gif)
+![26.remove-duplicates-from-sorted-array](../assets/26.remove-duplicates-from-sorted-array.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
 
