--- a/problems/92.reverse-linked-list-ii.md
+++ b/problems/92.reverse-linked-list-ii.md
@@ -27,7 +27,7 @@ Output: 1->4->3->2->5->NULL
 
 这样我们就可以把倒置后的那一小段链表加入到原链表中
 
-![92.reverse-linked-list-ii](./assets/92.reverse-linked-list-ii.gif)
+![92.reverse-linked-list-ii](../assets/92.reverse-linked-list-ii.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
 ## 关键点解析
