--- a/problems/94.binary-tree-inorder-traversal.md
+++ b/problems/94.binary-tree-inorder-traversal.md
@@ -30,7 +30,7 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 
 - 再将当前指针移到其右子节点上，若存在右子节点，则在下次循环时又可将其所有左子结点压入栈中， 重复上步骤
 
-![94.binary-tree-inorder-traversal](./assets/94.binary-tree-inorder-traversal.gif)
+![94.binary-tree-inorder-traversal](../assets/94.binary-tree-inorder-traversal.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
 ## 关键点解析
