--- a/problems/86.partition-list.md
+++ b/problems/86.partition-list.md
@@ -19,7 +19,7 @@ Output: 1->2->2->4->3->5
 
 遍历结束后，将dummyHead2插入到dummyHead1后面
 
-![86.partition-list](./assets/86.partition-list.gif)
+![86.partition-list](../assets/86.partition-list.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
 ## 关键点解析
