--- a/problems/900.rle-iterator.md
+++ b/problems/900.rle-iterator.md
@@ -174,5 +174,5 @@ RLEIterator.prototype.next = function(n) {
 
 ## 扩展阅读
 
-[run-length encode and huffman encode](../thinkings/run-length encode and huffman encode.md)
+[哈夫曼编码和游程编码](../thinkings/run-length-encode-and-huffman-encode.md)
 
