--- a/problems/322.coin-change.md
+++ b/problems/322.coin-change.md
@@ -129,3 +129,7 @@ var coinChange = function(coins, amount) {
 ## 扩展
 
 这是一道很简单描述的题目， 因此很多时候会被用到大公司的电面中。
+
+相似问题:
+
+[518.coin-change-2](./518.coin-change-2.md)
