feat: 301.remove-invalid-parentheses 增加图片

--- a/problems/301.remove-invalid-parentheses.md
+++ b/problems/301.remove-invalid-parentheses.md
@@ -32,6 +32,10 @@ Output: [""]
 
 而且由于题目要求是要删除最少的小括号，因此我们的思路是使用广度优先遍历，而不是深度有限的遍历。
 
+![301.remove-invalid-parentheses](../assets/problems/301.remove-invalid-parentheses.png)
+
+> 没有动图，请脑补
+
 ## 关键点解析
 
 - 广度有限遍历
