--- a/problems/226.invert-binary-tree.md
+++ b/problems/226.invert-binary-tree.md
@@ -1,3 +1,46 @@
+
+## 题目地址
+https://leetcode.com/problems/invert-binary-tree/description/
+
+## 题目描述
+
+```
+Invert a binary tree.
+
+Example:
+
+Input:
+
+     4
+   /   \
+  2     7
+ / \   / \
+1   3 6   9
+Output:
+
+     4
+   /   \
+  7     2
+ / \   / \
+9   6 3   1
+Trivia:
+This problem was inspired by this original tweet by Max Howell:
+
+Google: 90% of our engineers use the software you wrote (Homebrew), but you can’t invert a binary tree on a whiteboard so f*** off.
+```
+
+## 思路
+遍历树（随便怎么遍历），然后将左右子树交换位置。
+## 关键点解析
+
+- 递归简化操作
+- 如果树很高，建议使用栈来代替递归
+- 这道题目对顺序没要求的，因此队列数组操作都是一样的，无任何区别
+
+## 代码
+
+```js
+
 /*
  * @lc app=leetcode id=226 lang=javascript
  *
@@ -78,3 +121,4 @@ var invertTree = function(root) {
   }
   return root;
 };
+```
