--- a/problems/209.minimum-size-subarray-sum.md
+++ b/problems/209.minimum-size-subarray-sum.md
@@ -21,11 +21,13 @@ If you have figured out the O(n) solution, try coding another solution of which 
 
 用滑动窗口来记录序列， 每当滑动窗口中的 sum 超过 s， 就去更新最小值，并根据先进先出的原则更新滑动窗口，直至 sum 刚好小于 s
 
+![209.minimum-size-subarray-sum](../assets/problems/209.minimum-size-subarray-sum.png)
+
 > 这道题目和 leetcode 3 号题目有点像，都可以用滑动窗口的思路来解决
 
 ## 关键点
 
-- 滑动窗口简化操作
+- 滑动窗口简化操作(滑窗口适合用于求解这种要求`连续`的题目)
 
 ## 代码
 
