--- a/problems/279.perfect-squares.md
+++ b/problems/279.perfect-squares.md
@@ -73,7 +73,7 @@ DP 的代码见代码区。
   我的做法是 key 就是 n，value 是以 n 为起点，到达底端的深度。
   下次取出缓存的时候用当前的 level + 存的深度 就是我们想要的 level.
 
-- 使用递归的核心点还是选和不选的问题
+- 使用动态规划的核心点还是选和不选的问题
 
 ```js
 for (let i = 1; i <= n; i++) {
