--- a/problems/239.sliding-window-maximum.md
+++ b/problems/239.sliding-window-maximum.md
@@ -75,9 +75,9 @@ var maxSlidingWindow = function(nums, k) {
 
 ## 关键点解析
 
-- 递归简化操作
-- 如果树很高，建议使用栈来代替递归
-- 这道题目对顺序没要求的，因此队列数组操作都是一样的，无任何区别
+- 双端队列简化时间复杂度
+
+- 滑动窗口
 
 ## 代码
 
