feat: 部分文件增加内容

--- a/problems/150.evaluate-reverse-polish-notation.md
+++ b/problems/150.evaluate-reverse-polish-notation.md
@@ -100,21 +100,28 @@ The given RPN expression is always valid. That means the expression would always
  * @return {number}
  */
 var evalRPN = function(tokens) {
+  // 这种算法的前提是 tokens是有效的，
+  // 当然这由算法来保证
   const stack = [];
 
   for (let index = 0; index < tokens.length; index++) {
     const token = tokens[index];
+    // 对于运算数， 我们直接入栈
     if (!Number.isNaN(Number(token))) {
       stack.push(token);
     } else {
+      // 遇到操作符，我们直接大胆运算，不用考虑算术优先级
+      // 然后将运算结果入栈即可
+
+      // 当然如果题目进一步扩展，允许使用单目等其他运算符，我们的算法需要做微小的调整
       const a = Number(stack.pop());
       const b = Number(stack.pop());
       if (token === "*") {
-        stack.push(a * b);
+        stack.push(b * a);
       } else if (token === "/") {
-        stack.push(b / a > 0 ? Math.floor(b / a) : Math.ceil(b / a));
+        stack.push(b / a >> 0);
       } else if (token === "+") {
-        stack.push(a + b);
+        stack.push(b + a);
       } else if (token === "-") {
         stack.push(b - a);
       }
@@ -125,6 +132,11 @@ var evalRPN = function(tokens) {
 };
 
 ```
+
+## 扩展
+
+逆波兰表达式中只改变运算符的顺序，并不会改变操作数的相对顺序，这是一个重要的性质。
+另外逆波兰表达式完全不关心操作符的优先级，这在中缀表达式中是做不到的，这很有趣，感兴趣的可以私下查找资料研究下为什么会这样。
 
 
 
