--- a/problems/20.validParentheses.md
+++ b/problems/20.validParentheses.md
@@ -36,6 +36,8 @@ Output: true
 
 ## 思路
 
+关于这道题的思路，邓俊辉讲的非常好，没有看过的同学可以看一下, [视频地址](http://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184+sp/courseware/ad1a23c053df4501a3facd66ef6ccfa9/8d6f450e7f7a445098ae1d507fda80f6/)。
+
 使用栈,遍历输入字符串
 
 如果当前字符为左半边括号时，则将其压入栈中
@@ -53,6 +55,11 @@ Output: true
 ![20.validParentheses](../assets/20.validParentheses.gif)
 
 (图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
+
+> 值得注意的是，如果题目要求只有一种括号，那么我们其实可以使用更简洁，更省内存的方式 - 计数器来进行求解，而
+不必要使用栈。
+
+> 事实上，这类问题还可以进一步扩展，我们可以去解析类似HTML等标记语法， 比如 <p></p> <body></body>
 
 ## 关键点解析
 
@@ -156,3 +163,6 @@ var isValid = function(s) {
     return valid;
 };
 ```
+
+## 扩展
+如果让你检查XML标签是否闭合如何检查， 更进一步如果要你实现一个简单的XML的解析器，应该怎么实现？
