--- a/problems/23.merge-k-sorted-lists.md
+++ b/problems/23.merge-k-sorted-lists.md
@@ -1,3 +1,47 @@
+## 题目地址
+https://leetcode.com/problems/merge-k-sorted-lists/description
+
+## 题目描述
+
+```
+Merge k sorted linked lists and return it as one sorted list. Analyze and describe its complexity.
+
+Example:
+
+Input:
+[
+  1->4->5,
+  1->3->4,
+  2->6
+]
+Output: 1->1->2->3->4->4->5->6
+
+```
+
+## 思路
+
+这道题目是合并k个已排序的链表，号称leetcode目前`最难`的链表题。 和之前我们解决的[88.merge-sorted-array](./88.merge-sorted-array.md)很像。
+他们有两点区别：
+
+1. 这道题的数据结构是链表，那道是数组。这个其实不复杂，毕竟都是线性的数据结构。
+
+2. 这道题需要合并k个元素，那道则只需要合并两个。这个是两题的关键差别，也是这道题难度为`hard`的原因。
+
+因此我们可以看出，这道题目是`88.merge-sorted-array`的进阶版本。其实思路也有点像，我们来具体分析下第二条。
+如果你熟悉合并排序的话，你会发现它就是`合并排序的一部分`。
+
+具体我们可以来看一个动画
+
+![23.merge-k-sorted-lists](../assets/problems/23.merge-k-sorted-lists.gif)
+
+（动画来自 https://zhuanlan.zhihu.com/p/61796021）
+## 关键点解析
+
+- 分治
+- 合并排序(merge sort)
+
+## 代码
+```js
 /*
  * @lc app=leetcode id=23 lang=javascript
  *
@@ -30,8 +74,8 @@
 function mergeTwoLists(l1, l2) {
   const dummyHead = {};
   let current = dummyHead;
-  // 1 -> 3 -> 5
-  // 2 -> 4 -> 6
+  // l1: 1 -> 3 -> 5
+  // l2: 2 -> 4 -> 6
   while (l1 !== null && l2 !== null) {
     if (l1.val < l2.val) {
       current.next = l1; // 把小的添加到结果链表
@@ -83,3 +127,8 @@ var mergeKLists = function(lists) {
 
   return mergeTwoLists(mergeKLists(l1), mergeKLists(l2));
 };
+```
+
+## 相关题目
+
+-[88.merge-sorted-array](./88.merge-sorted-array.md)
