--- a/problems/152.maximum-product-subarray.md
+++ b/problems/152.maximum-product-subarray.md
@@ -51,7 +51,7 @@ var maxProduct = function(nums) {
 
 ![152.maximum-product-subarray](../assets/problems/152.maximum-product-subarray.png)
 
-这种思路的解法由于只需要遍历依次，其时间复杂度是O(n)，代码见下方代码区。
+这种思路的解法由于只需要遍历一次，其时间复杂度是O(n)，代码见下方代码区。
 ## 关键点
 
 - 同时记录乘积最大值和乘积最小值
