feat: #92 增加注释 #236增加扩展 backlog增加题目

--- a/problems/236.lowest-common-ancestor-of-a-binary-tree.md
+++ b/problems/236.lowest-common-ancestor-of-a-binary-tree.md
@@ -147,3 +147,6 @@ var lowestCommonAncestor = function(root, p, q) {
 };
 ```
 
+## 扩展
+如果递归的结束条件改为`if (!root || root.left === p || root.right === q) return root;` 代表的是嗯呢么意思，对结果有什么样的影响？
+
