--- a/problems/92.reverse-linked-list-ii.md
+++ b/problems/92.reverse-linked-list-ii.md
@@ -89,14 +89,16 @@ Output: 1->4->3->2->5->NULL
  * @return {ListNode}
  */
 var reverseBetween = function(head, m, n) {
+    // 虚拟节点，简化操作
     const dummyHead = {
         next: head
     }
 
-    let current = dummyHead.next;
-    let pre = current;
-    let index = 0;
+    let current = dummyHead.next; // 当前遍历的节点
+    let pre = current; // 因为要反转，因此我们需要记住前一个节点
+    let index = 0; // 链表索引，用来判断是否是特殊位置（头尾位置）
 
+    // 上面提到的四个特殊节点
     let midStartNode = null;
     let preMidStartNode = null;
     let midEndNode = null;
@@ -106,11 +108,12 @@ var reverseBetween = function(head, m, n) {
         const next = current.next;
         index++;
 
-        // reverse linked list
+        // 对 (m - n) 范围内的节点进行反转
         if (index > m && index <= n) {           
             current.next = pre;
         }
 
+        // 下面四个if都是边界, 用于更新四个特殊节点的值
         if (index === m - 1) {
             preMidStartNode = current;
         }
@@ -120,7 +123,6 @@ var reverseBetween = function(head, m, n) {
 
         if (index === n + 1) {
             postMidEndNode = current;
-            postMidEndNode.next
         }
 
         if (index === n) {
