--- a/problems/40.combination-sum-ii.md
+++ b/problems/40.combination-sum-ii.md
@@ -1,11 +1,11 @@
 ## 题目地址
-https://leetcode.com/problems/combination-sum/description/
+https://leetcode.com/problems/combination-sum-ii/description/
 
 ## 题目描述
 ```
-Given a set of candidate numbers (candidates) (without duplicates) and a target number (target), find all unique combinations in candidates where the candidate numbers sums to target.
+Given a collection of candidate numbers (candidates) and a target number (target), find all unique combinations in candidates where the candidate numbers sums to target.
 
-The same repeated number may be chosen from candidates unlimited number of times.
+Each number in candidates may only be used once in the combination.
 
 Note:
 
@@ -13,20 +13,21 @@ All numbers (including target) will be positive integers.
 The solution set must not contain duplicate combinations.
 Example 1:
 
-Input: candidates = [2,3,6,7], target = 7,
+Input: candidates = [10,1,2,7,6,1,5], target = 8,
 A solution set is:
 [
-  [7],
-  [2,2,3]
+  [1, 7],
+  [1, 2, 5],
+  [2, 6],
+  [1, 1, 6]
 ]
 Example 2:
 
-Input: candidates = [2,3,5], target = 8,
+Input: candidates = [2,5,2,1,2], target = 5,
 A solution set is:
 [
-  [2,2,2,2],
-  [2,3,3],
-  [3,5]
+  [1,2,2],
+  [5]
 ]
 
 ```
