--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -1,32 +1,18 @@
 ## 题目地址
-https://leetcode.com/problems/combination-sum/description/
+https://leetcode.com/problems/permutations-ii/description/
 
 ## 题目描述
 ```
-Given a set of candidate numbers (candidates) (without duplicates) and a target number (target), find all unique combinations in candidates where the candidate numbers sums to target.
+Given a collection of numbers that might contain duplicates, return all possible unique permutations.
 
-The same repeated number may be chosen from candidates unlimited number of times.
+Example:
 
-Note:
-
-All numbers (including target) will be positive integers.
-The solution set must not contain duplicate combinations.
-Example 1:
-
-Input: candidates = [2,3,6,7], target = 7,
-A solution set is:
+Input: [1,1,2]
+Output:
 [
-  [7],
-  [2,2,3]
-]
-Example 2:
-
-Input: candidates = [2,3,5], target = 8,
-A solution set is:
-[
-  [2,2,2,2],
-  [2,3,3],
-  [3,5]
+  [1,1,2],
+  [1,2,1],
+  [2,1,1]
 ]
 
 ```
