--- a/problems/46.permutations.md
+++ b/problems/46.permutations.md
@@ -1,32 +1,21 @@
 ## 题目地址
-https://leetcode.com/problems/combination-sum/description/
+https://leetcode.com/problems/permutations/description/
 
 ## 题目描述
 ```
-Given a set of candidate numbers (candidates) (without duplicates) and a target number (target), find all unique combinations in candidates where the candidate numbers sums to target.
+Given a collection of distinct integers, return all possible permutations.
 
-The same repeated number may be chosen from candidates unlimited number of times.
+Example:
 
-Note:
-
-All numbers (including target) will be positive integers.
-The solution set must not contain duplicate combinations.
-Example 1:
-
-Input: candidates = [2,3,6,7], target = 7,
-A solution set is:
+Input: [1,2,3]
+Output:
 [
-  [7],
-  [2,2,3]
-]
-Example 2:
-
-Input: candidates = [2,3,5], target = 8,
-A solution set is:
-[
-  [2,2,2,2],
-  [2,3,3],
-  [3,5]
+  [1,2,3],
+  [1,3,2],
+  [2,1,3],
+  [2,3,1],
+  [3,1,2],
+  [3,2,1]
 ]
 
 ```
