--- a/problems/78.subsets.md
+++ b/problems/78.subsets.md
@@ -1,34 +1,28 @@
 
 ## 题目地址
-https://leetcode.com/problems/combination-sum/description/
+https://leetcode.com/problems/subsets/description/
 
 ## 题目描述
 ```
-Given a set of candidate numbers (candidates) (without duplicates) and a target number (target), find all unique combinations in candidates where the candidate numbers sums to target.
+Given a set of distinct integers, nums, return all possible subsets (the power set).
 
-The same repeated number may be chosen from candidates unlimited number of times.
+Note: The solution set must not contain duplicate subsets.
 
-Note:
+Example:
 
-All numbers (including target) will be positive integers.
-The solution set must not contain duplicate combinations.
-Example 1:
-
-Input: candidates = [2,3,6,7], target = 7,
-A solution set is:
+Input: nums = [1,2,3]
+Output:
 [
-  [7],
-  [2,2,3]
+  [3],
+  [1],
+  [2],
+  [1,2,3],
+  [1,3],
+  [2,3],
+  [1,2],
+  []
 ]
-Example 2:
 
-Input: candidates = [2,3,5], target = 8,
-A solution set is:
-[
-  [2,2,2,2],
-  [2,3,3],
-  [3,5]
-]
 
 ```
 
