--- a/problems/20.validParentheses.md
+++ b/problems/20.validParentheses.md
@@ -153,7 +153,7 @@ var isValid = function(s) {
         } else {
             const peak = stack.pop();
             if (v !== mapper[peak]) {
-                valid = false
+                return false;
             }
         }
     }
