--- a/problems/191.number-of-1-bits.md
+++ b/problems/191.number-of-1-bits.md
@@ -47,6 +47,8 @@ In Java, the compiler represents the signed integers using 2's complement notati
 
 1. `n & (n - 1)` 可以`消除` n 最后的一个1的原理 简化操作
 
+2. bit 运算
+
 
 ## 代码
 
