--- a/problems/206.reverse-linked-list.md
+++ b/problems/206.reverse-linked-list.md
@@ -66,18 +66,18 @@ A linked list can be reversed either iteratively or recursively. Could you imple
  * @return {ListNode}
  */
 var reverseList = function(head) {
-    const dummyHead = {
-        next: head
-    }
-    let current = dummyHead.next;
+    if (!head || !head.next) return head;
+
+    let cur = head;
     let pre = null;
 
-    while(current) {
-        const next = current.next;
-        current.next = pre;
-        pre = current;
-        current = next;
+    while(cur) {
+        const next = cur.next;
+        cur.next = pre;
+        pre = cur;
+        cur = next;
     }
+
     return pre;
 };
 
