--- a/problems/102.binary-tree-level-order-traversal.md
+++ b/problems/102.binary-tree-level-order-traversal.md
@@ -39,6 +39,8 @@ return its level order traversal as:
 
 - 树的基本操作- 遍历 - 层次遍历（BFS）
 
+- 注意塞入null的时候，判断一下当前队列是否为空，不然会无限循环
+
 
 ## 代码
 
@@ -121,5 +123,7 @@ var levelOrder = function(root) {
 
   return items;
 };
-
 ```
+## 相关题目
+- [103.binary-tree-zigzag-level-order-traversal](./103.binary-tree-zigzag-level-order-traversal.md)
+- [104.maximum-depth-of-binary-tree](./104.maximum-depth-of-binary-tree.md)
