--- a/problems/20.validParentheses.md
+++ b/problems/20.validParentheses.md
@@ -163,6 +163,30 @@ var isValid = function(s) {
     return valid;
 };
 ```
+Python Code
+```
+class Solution:
+    def isValid(self,s):
+      stack = []
+      map = {
+        "{":"}",
+        "[":"]",
+        "(":")"
+      }
+      for x in s:
+        if x in map:
+          stack.append(map[x])
+        else:
+          if len(stack)!=0:
+            top_element = stack.pop()
+            if x != top_element:
+              return False
+            else:
+              continue
+          else:
+            return False
+      return len(stack)==0
+```
 
 ## 扩展
 如果让你检查XML标签是否闭合如何检查， 更进一步如果要你实现一个简单的XML的解析器，应该怎么实现？
