--- a/problems/20.validParentheses.md
+++ b/problems/20.validParentheses.md
@@ -70,7 +70,7 @@ Output: true
 > 入： push  出 shift 就是队列
 ## 代码
 
-
+Javascript Code:
 ```js
 /*
  * @lc app=leetcode id=20 lang=javascript
@@ -163,29 +163,29 @@ var isValid = function(s) {
     return valid;
 };
 ```
-Python Code
+Python Code:
 ```
-class Solution:
-    def isValid(self,s):
-      stack = []
-      map = {
-        "{":"}",
-        "[":"]",
-        "(":")"
-      }
-      for x in s:
-        if x in map:
-          stack.append(map[x])
-        else:
-          if len(stack)!=0:
-            top_element = stack.pop()
-            if x != top_element:
-              return False
+    class Solution:
+        def isValid(self,s):
+          stack = []
+          map = {
+            "{":"}",
+            "[":"]",
+            "(":")"
+          }
+          for x in s:
+            if x in map:
+              stack.append(map[x])
             else:
-              continue
-          else:
-            return False
-      return len(stack)==0
+              if len(stack)!=0:
+                top_element = stack.pop()
+                if x != top_element:
+                  return False
+                else:
+                  continue
+              else:
+                return False
+          return len(stack)==0
 ```
 
 ## 扩展
