--- a/templates/daily/2019-06-03.md
+++ b/templates/daily/2019-06-03.md
@@ -5,7 +5,7 @@
 - 时间： 2019-06-03
 - 题目链接：xxxx
 - tag：dp
-> tag 可以多个，以空格分隔，tag是一个枚举值，有 array dp math等，具体可以参考leetcode tag
+> tag 可以多个，以逗号分隔，tag是一个枚举值，有 array dp math等，具体可以参考leetcode tag
 - 题目描述：
 
 xxxxxxxx
