binary-tree-preorder-traversal: add C++ solution (#27)

--- a/problems/125.valid-palindrome.md
+++ b/problems/125.valid-palindrome.md
@@ -48,6 +48,10 @@ Output: false
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code:
+
 ```js
 
 /*
@@ -92,5 +96,24 @@ var isPalindrome = function(s) {
   }
 
   return right <= left;
+};
+```
+C++ Code:
+```C++
+class Solution {
+public:
+    bool isPalindrome(string s) {
+        if (s.empty())
+            return true;
+        const char* s1 = s.c_str();
+        const char* e = s1 + s.length() - 1;
+        while (e > s1) {
+            if (!isalnum(*s1)) {++s1; continue;}
+            if (!isalnum(*e)) {--e; continue;}
+            if (tolower(*s1) != tolower(*e)) return false;
+            else {--e; ++s1;}
+        }
+        return true;
+    }
 };
 ```
