--- a/problems/144.binary-tree-preorder-traversal.md
+++ b/problems/144.binary-tree-preorder-traversal.md
@@ -48,6 +48,10 @@ mid是一个具体的节点，left和right`递归求出即可`
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code:
+
 ```js
 /*
  * @lc app=leetcode id=144 lang=javascript
@@ -121,4 +125,32 @@ var preorderTraversal = function(root) {
 };
 
 ```
-
+C++ Code:
+```C++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    vector<int> preorderTraversal(TreeNode* root) {
+        vector<int> v;
+        vector<TreeNode*> s;
+        while (root != NULL || !s.empty()) {
+            while (root != NULL) {
+                v.push_back(root->val);
+                s.push_back(root);
+                root = root->left;
+            }
+            root = s.back()->right;
+            s.pop_back();
+        }
+        return v;
+    }
+};
+```
