--- a/problems/191.number-of-1-bits.md
+++ b/problems/191.number-of-1-bits.md
@@ -52,6 +52,10 @@ In Java, the compiler represents the signed integers using 2's complement notati
 
 ## 代码
 
+语言支持：JS, C++
+
+JavaScript Code:
+
 ```js
 /*
  * @lc app=leetcode id=191 lang=javascript
@@ -132,4 +136,49 @@ var hammingWeight = function(n) {
   return count;
 };
 
+```
+C++ code:
+```c++
+class Solution {
+public:
+    int hammingWeight(uint32_t v) {
+        auto count = 0;
+        while (v != 0) {
+            v &= (v - 1);
+            ++count;
+        }
+        return count;
+    }
+};
+```
+
+## 扩展
+可以使用位操作来达到目的。例如8位的整数21:
+
+![number-of-1-bits](../assets/problems/191.number-of-1-bits.png)
+
+C++ Code：
+```c++
+const uint32_t ODD_BIT_MASK = 0xAAAAAAAA;
+const uint32_t EVEN_BIT_MASK = 0x55555555;
+const uint32_t ODD_2BIT_MASK = 0xCCCCCCCC;
+const uint32_t EVEN_2BIT_MASK = 0x33333333;
+const uint32_t ODD_4BIT_MASK = 0xF0F0F0F0;
+const uint32_t EVEN_4BIT_MASK = 0x0F0F0F0F;
+const uint32_t ODD_8BIT_MASK = 0xFF00FF00;
+const uint32_t EVEN_8BIT_MASK = 0x00FF00FF;
+const uint32_t ODD_16BIT_MASK = 0xFFFF0000;
+const uint32_t EVEN_16BIT_MASK = 0x0000FFFF;
+
+class Solution {
+public:
+
+    int hammingWeight(uint32_t v) {
+        v = (v & EVEN_BIT_MASK) + ((v & ODD_BIT_MASK) >> 1);
+        v = (v & EVEN_2BIT_MASK) + ((v & ODD_2BIT_MASK) >> 2);
+        v = (v & EVEN_4BIT_MASK) + ((v & ODD_4BIT_MASK) >> 4);
+        v = (v & EVEN_8BIT_MASK) + ((v & ODD_8BIT_MASK) >> 8);
+        return (v & EVEN_16BIT_MASK) + ((v & ODD_16BIT_MASK) >> 16);
+    }
+};
 ```
