--- a/daily/2019-06-27.md
+++ b/daily/2019-06-27.md
@@ -3,7 +3,7 @@
 ### 信息卡片
 
 - 时间：2019-06-21
-- 题目链接：- (但是 leetcode 上有一个相似的题目https://leetcode.com/problems/sqrt-x/)
+- 题目链接：- (但是 leetcode 上有一个相似的题目https://leetcode.com/problems/sqrtx/)
 - tag：`binary search` `math`
 
 ### 题目描述
