--- a/problems/131.palindrome-partitioning.md
+++ b/problems/131.palindrome-partitioning.md
@@ -92,4 +92,5 @@ var partition = function(s) {
 - [47.permutations-ii](./47.permutations-ii.md)
 - [78.subsets](./78.subsets.md)
 - [90.subsets-ii](./90.subsets-ii.md)
+- [113.path-sum-ii](./113.path-sum-ii.md)
 
