--- a/problems/39.combination-sum.md
+++ b/problems/39.combination-sum.md
@@ -134,5 +134,6 @@ var combinationSum = function(candidates, target) {
 - [47.permutations-ii](./47.permutations-ii.md)
 - [78.subsets](./78.subsets.md)
 - [90.subsets-ii](./90.subsets-ii.md)
+- [113.path-sum-ii](./113.path-sum-ii.md)
 - [131.palindrome-partitioning](./131.palindrome-partitioning.md)
 
