--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -104,4 +104,5 @@ var permuteUnique = function(nums) {
 - [46.permutations](./46.permutations.md)
 - [78.subsets](./78.subsets.md)
 - [90.subsets-ii](./90.subsets-ii.md)
+- [113.path-sum-ii](./113.path-sum-ii.md)
 - [131.palindrome-partitioning](./131.palindrome-partitioning.md)
