--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -28,13 +28,11 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 由于我们是想获取到最大的利润，我们的策略应该是低点买入，高点卖出。
 
-由于题目对于交易次数有限制，只能交易一次，因此问题的本质其实就是求相邻波峰浪谷的差值的最大值。
+由于题目对于交易次数有限制，只能交易一次，因此问题的本质其实就是求波峰浪谷的差值的最大值。
 
 用图表示的话就是这样：
 
-> 如下图，我们只需要求出加粗部分的最大值即可
-
-![121.best-time-to-buy-and-sell-stock](../assets/problems/121.best-time-to-buy-and-sell-stock.png)
+![121.best-time-to-buy-and-sell-stock](../assets/problems/121.best-time-to-buy-and-sell-stock.jpg)
 
 ## 关键点解析
 
