--- a/daily/2019-06-27.md
+++ b/daily/2019-06-27.md
@@ -1,9 +1,10 @@
-## 每日一题 - mySqrt
+## 每日一题 - my-sqrt
 
 ### 信息卡片
 
 - 时间：2019-06-21
-- 题目链接：- (但是 leetcode 上有一个相似的题目https://leetcode.com/problems/sqrtx/)
+- 题目链接：无 
+> leetcode 上有一个相似的[题目](https://leetcode.com/problems/sqrtx/)
 - tag：`binary search` `math`
 
 ### 题目描述
