feat: #121 #122 add python code (#43)

--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -40,6 +40,10 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
+语言支持：JS，Python 
+
+JS Code:
+
 ```js
 /*
  * @lc app=leetcode id=121 lang=javascript
@@ -102,7 +106,41 @@ var maxProfit = function(prices) {
 };
 ```
 
+
+
+Python Code:
+
+```python
+# 应用Kadane's algorithms 
+class Solution:
+    def maxProfit(self, prices: 'List[int]') -> int:
+        """
+        step by step
+        """
+        # error case
+        if len(prices) < 1:
+            return 0
+
+        # caluate the daily gains, break into a subarray problem
+        gains = [prices[i]-prices[i-1] for i in range(1, len(prices))]
+
+        loc_max = global_max = 0 #not gains[0] in case of negative
+        for i in range(len(gains)):
+            loc_max = max(loc_max + gains[i], gains[i])
+            if loc_max > global_max:
+                global_max = loc_max
+"""
+Runtime: 48 ms, faster than 34.50% of Python3 online submissions for Best Time to Buy and Sell Stock.
+Memory Usage: 14.1 MB, less than 10.26% of Python3 online submissions for Best Time to Buy and Sell Stock.
+"""
+```
+
+
+
+
+
 ## 相关题目
+
 - [122.best-time-to-buy-and-sell-stock-ii](./122.best-time-to-buy-and-sell-stock-ii.md)
 - [309.best-time-to-buy-and-sell-stock-with-cooldown](./309.best-time-to-buy-and-sell-stock-with-cooldown.md)
 
