--- a/problems/29.divide-two-integers.md
+++ b/problems/29.divide-two-integers.md
@@ -115,4 +115,4 @@ function helper(dividend, divisor) {
 ```
 
 ## 相关题目
-[875.koko-eating-bananas](./875.koko-eating-bananas.md)
+- [875.koko-eating-bananas](./875.koko-eating-bananas.md)
