--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -99,9 +99,11 @@ var permuteUnique = function(nums) {
 
 ## 相关题目
 
+- [31.next-permutation](./31.next-permutation.md)
 - [39.combination-sum](./39.combination-sum.md)
 - [40.combination-sum-ii](./40.combination-sum-ii.md)
 - [46.permutations](./46.permutations.md)
+- [60.permutation-sequence](./60.permutation-sequence.md)(TODO)
 - [78.subsets](./78.subsets.md)
 - [90.subsets-ii](./90.subsets-ii.md)
 - [113.path-sum-ii](./113.path-sum-ii.md)
