best-time-to-buy-and-sell-stock: add C++ solution (#45)

--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -40,7 +40,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
-语言支持：JS，Python 
+语言支持：JS，Python，C++ 
 
 JS Code:
 
@@ -135,7 +135,28 @@ Memory Usage: 14.1 MB, less than 10.26% of Python3 online submissions for Best T
 """
 ```
 
-
+C++ Code:
+```c++
+/**
+ * 系统上C++的测试用例中的输入有[]，因此需要加一个判断
+ */
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        if (prices.empty()) return 0;
+        auto min = prices[0];
+        auto profit = 0;
+        for (auto i = 1; i < prices.size(); ++i) {
+            if (prices[i] > prices[i -1]) {
+                profit = max(profit, prices[i] - min);
+            } else {
+                min = std::min(min, prices[i]);;
+            }
+        }
+        return profit;
+    }
+};
+```
 
 
 
