--- a/problems/78.subsets.md
+++ b/problems/78.subsets.md
@@ -49,6 +49,9 @@ Output:
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code:
 ```js
 
 /*
@@ -102,6 +105,27 @@ var subsets = function(nums) {
     const list = [];
     backtrack(list, [], nums, 0);
     return list;
+};
+```
+C++ Code：
+```C++
+class Solution {
+public:
+    vector<vector<int>> subsets(vector<int>& nums) {
+        auto ret = vector<vector<int>>();
+        auto tmp = vector<int>();
+        backtrack(ret, tmp, nums, 0);
+        return ret;
+    }
+    
+    void backtrack(vector<vector<int>>& list, vector<int>& tempList, vector<int>& nums, int start) {
+        list.push_back(tempList);
+        for (auto i = start; i < nums.size(); ++i) {
+            tempList.push_back(nums[i]);
+            backtrack(list, tempList, nums, i + 1);
+            tempList.pop_back();
+        }
+    }
 };
 ```
 
