--- a/problems/221.maximal-square.md
+++ b/problems/221.maximal-square.md
@@ -1,39 +1,31 @@
 
 ## 题目地址
 
-https://leetcode.com/problems/number-of-islands/
+https://leetcode.com/problems/maximal-square/
 
 ## 题目描述
 
 
 ```
-Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges of the grid are all surrounded by water.
+Given a 2D binary matrix filled with 0's and 1's, find the largest square containing only 1's and return its area.
 
-Example 1:
+Example:
 
-Input:
-11110
-11010
-11000
-00000
+Input: 
 
-Output: 1
-Example 2:
+1 0 1 0 0
+1 0 1 1 1
+1 1 1 1 1
+1 0 0 1 0
 
-Input:
-11000
-11000
-00100
-00011
-
-Output: 3
+Output: 4
 ```
 
 ## 思路
 
 ![221.maximal-square](../assets/problems/221.maximal-square-1.jpg)
 
-符合直觉的做法是暴力求解处所有的正方形，逐一计算面积，然后记录最大的。这种时间复杂度很好。
+符合直觉的做法是暴力求解处所有的正方形，逐一计算面积，然后记录最大的。这种时间复杂度很高。
 
 我们考虑使用动态规划，我们使用dp[i][j]表示以matrix[i][j]为右下角的顶点的可以组成的最大正方形的边长。
 那么我们只需要计算所有的i，j组合，然后求出最大值即可。
