feat: #230 新增一种解法

--- a/problems/230.kth-smallest-element-in-a-bst.md
+++ b/problems/230.kth-smallest-element-in-a-bst.md
@@ -36,8 +36,16 @@ What if the BST is modified (insert/delete operations) often and you need to fin
 ```
 
 ## 思路
+
+解法一：
+
 由于‘中序遍历一个二叉查找树（BST）的结果是一个有序数组’ ，因此我们只需要在遍历到第k个，返回当前元素即可。
 中序遍历相关思路请查看[binary-tree-traversal](../thinkings/binary-tree-traversal.md)
+
+解法二：
+
+联想到二叉搜索树的性质，root 大于左子树，小于右子树，如果左子树的节点数目等于 K-1，那么 root 就是结果，否则如果左子树节点数目小于 K-1，那么结果必然在右子树，否则就在左子树。
+因此在搜索的时候同时返回节点数目，跟 K 做对比，就能得出结果了。
 
 
 ## 关键点解析
@@ -45,6 +53,8 @@ What if the BST is modified (insert/delete operations) often and you need to fin
 - 中序遍历
 
 ## 代码
+
+解法一：
 
 ```js
 
@@ -95,6 +105,40 @@ var kthSmallest = function(root, k) {
 
     
 };
+```
+
+
+解法二：
+
+```js
+
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+function nodeCount(node) {
+    if (node === null) return 0;
+    
+    const l = nodeCount(node.left);
+    const r = nodeCount(node.right);
+    
+    return 1 + l + r;
+}
+/**
+ * @param {TreeNode} root
+ * @param {number} k
+ * @return {number}
+ */
+var kthSmallest = function(root, k) {
+    const c = nodeCount(root.left);
+    if (c === k - 1) return root.val;
+    else if (c < k - 1) return kthSmallest(root.right, k - c - 1);
+    return kthSmallest(root.left, k)
+};
+
 ```
 
 ## 扩展
