feat: #94 add C++ implementation (#58)

--- a/problems/94.binary-tree-inorder-traversal.md
+++ b/problems/94.binary-tree-inorder-traversal.md
@@ -53,6 +53,10 @@ mid是一个具体的节点，left和right`递归求出即可`
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code：
+
 ```js
 /*
  * @lc app=leetcode id=94 lang=javascript
@@ -129,5 +133,33 @@ var inorderTraversal = function(root) {
 
 };
 
+```
+C++ Code：
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    vector<int> inorderTraversal(TreeNode* root) {
+        vector<TreeNode*> s;
+        vector<int> v;
+        while (root != NULL || !s.empty()) {
+            for (; root != NULL; root = root->left)
+                s.push_back(root);
+            v.push_back(s.back()->val);
+            root = s.back()->right;
+            s.pop_back();
+        }
+        return v;
+    }
+};
 ```
 
