feat: #103, #129: add C++ implementation (#63)
* Update 103.binary-tree-zigzag-level-order-traversal.md

* #129: add C++ implementation

写描述比写代码难。。。

--- a/problems/103.binary-tree-zigzag-level-order-traversal.md
+++ b/problems/103.binary-tree-zigzag-level-order-traversal.md
@@ -44,6 +44,10 @@ return its zigzag level order traversal as:
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code：
+
 ```js
 /*
  * @lc app=leetcode id=103 lang=javascript
@@ -132,6 +136,77 @@ var zigzagLevelOrder = function(root) {
     
 };
 ```
+C++ Code：
+```C++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    vector<vector<int>> zigzagLevelOrder(TreeNode* root) {
+        auto ret = vector<vector<int>>();
+        if (root == nullptr) return ret;
+        auto queue = vector<const TreeNode*>{root};
+        auto isOdd = true;
+        while (!queue.empty()) {
+            auto sz = queue.size();
+            auto level = vector<int>();
+            for (auto i = 0; i < sz; ++i) {
+                auto n = queue.front();
+                queue.erase(queue.begin());
+                if (isOdd) level.push_back(n->val);
+                else level.insert(level.begin(), n->val);
+                if (n->left != nullptr) queue.push_back(n->left);
+                if (n->right != nullptr) queue.push_back(n->right);
+            }
+            isOdd = !isOdd;
+            ret.push_back(level);
+        }
+        return ret;
+    }
+};
+```
+## 拓展
+
+由于二叉树是递归结构，因此，可以采用递归的方式来处理。在递归时需要保留当前的层次信息（从0开始），作为参数传递给下一次递归调用。
+
+### 描述
+
+1. 当前层次为偶数时，将当前节点放到当前层的结果数组尾部
+2. 当前层次为奇数时，将当前节点放到当前层的结果数组头部
+3. 递归对左子树进行之字形遍历，层数参数为当前层数+1
+4. 递归对右子树进行之字形遍历，层数参数为当前层数+1
+
+### C++实现
+
+```C++
+class Solution {
+public:
+    vector<vector<int>> zigzagLevelOrder(TreeNode* root) {
+        auto ret = vector<vector<int>>();
+        zigzagLevelOrder(root, 0, ret);
+        return ret;
+    }
+private:
+    void zigzagLevelOrder(const TreeNode* root, int level, vector<vector<int>>& ret) {
+        if (root == nullptr || level < 0) return;
+        if (ret.size() <= level) {
+            ret.push_back(vector<int>());
+        }
+        if (level % 2 == 0) ret[level].push_back(root->val);
+        else ret[level].insert(ret[level].begin(), root->val);
+        zigzagLevelOrder(root->left, level + 1, ret);
+        zigzagLevelOrder(root->right, level + 1, ret);
+    }
+};
+```
+
 ## 相关题目
 - [102.binary-tree-level-order-traversal](./102.binary-tree-level-order-traversal.md)
 - [104.maximum-depth-of-binary-tree](./104.maximum-depth-of-binary-tree.md)
