--- a/problems/129.sum-root-to-leaf-numbers.md
+++ b/problems/129.sum-root-to-leaf-numbers.md
@@ -64,6 +64,10 @@ Therefore, sum = 495 + 491 + 40 = 1026.
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScipt Code：
+
 ```js
 /*
  * @lc app=leetcode id=129 lang=javascript
@@ -98,6 +102,85 @@ var sumNumbers = function(root) {
 };
 ```
 
+C++ Code：
+```C++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    int sumNumbers(TreeNode* root) {
+        return helper(root, 0);
+    }
+private:
+    int helper(const TreeNode* root, int val) {
+        if (root == nullptr) return 0;
+        auto ret = root->val + val * 10;
+        if (root->left == nullptr && root->right == nullptr)
+            return ret;
+        auto l = helper(root->left, ret);
+        auto r = helper(root->right, ret);
+        return l + r;
+    }
+};
+```
+
+## 拓展
+
+通常来说，可以利用队列、栈等数据结构将递归算法转为递推算法。
+
+### 描述
+
+使用两个队列：
+1. 当前和队列：保存上一层每个结点的当前和（比如49和40）
+2. 结点队列：保存当前层所有的非空结点
+
+每次循环按层处理结点队列。处理步骤：
+1. 从结点队列取出一个结点
+2. 从当前和队列将上一层对应的当前和取出来
+3. 若左子树非空，则将该值乘以10加上左子树的值，并添加到当前和队列中
+4. 若右子树非空，则将该值乘以10加上右子树的值，并添加到当前和队列中
+5. 若左右子树均为空时，将该节点的当前和加到返回值中
+
+### C++实现
+```C++
+class Solution {
+public:
+    int sumNumbers(TreeNode* root) {
+        if (root == nullptr) return 0;
+        auto ret = 0;
+        auto runningSum = vector<int>{root->val};
+        auto queue = vector<const TreeNode*>{root};
+        while (!queue.empty()) {
+            auto sz = queue.size();
+            for (auto i = 0; i < sz; ++i) {
+                auto n = queue.front();
+                queue.erase(queue.begin());
+                auto tmp = runningSum.front();
+                runningSum.erase(runningSum.begin());
+                if (n->left != nullptr) {
+                    runningSum.push_back(tmp * 10 + n->left->val);
+                    queue.push_back(n->left);
+                }
+                if (n->right != nullptr) {
+                    runningSum.push_back(tmp * 10 + n->right->val);
+                    queue.push_back(n->right);
+                } 
+                if (n->left == nullptr && n->right == nullptr) {
+                    ret += tmp;
+                }
+            }
+        }
+        return ret;
+    }
+};
+```
 ## 相关题目
 
 - [sum-of-root-to-leaf-binary-numbers](https://leetcode.com/problems/sum-of-root-to-leaf-binary-numbers/)
