feat: #113: add C++ implementation (#65)

--- a/problems/113.path-sum-ii.md
+++ b/problems/113.path-sum-ii.md
@@ -49,6 +49,10 @@ Return:
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code：
+
 ```js
 /*
  * @lc app=leetcode id=113 lang=javascript
@@ -85,7 +89,39 @@ var pathSum = function(root, sum) {
   return res;
 };
 ```
-
+C++ Code:
+```C++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    vector<vector<int>> pathSum(TreeNode* root, int sum) {
+        auto ret = vector<vector<int>>();
+        auto temp = vector<int>();
+        backtrack(root, sum, ret, temp);
+        return ret;
+    }
+private:
+    void backtrack(const TreeNode* root, int sum, vector<vector<int>>& ret, vector<int>& tempList) {
+        if (root == nullptr) return;
+        tempList.push_back(root->val);
+        if (root->val == sum && root->left == nullptr && root->right == nullptr) {
+            ret.push_back(tempList);
+        } else {
+            backtrack(root->left, sum - root->val, ret, tempList);
+            backtrack(root->right, sum - root->val, ret, tempList);
+        }
+        tempList.pop_back();        
+    }
+};
+```
 ## 相关题目
 
 - [39.combination-sum](./39.combination-sum.md)
