--- a/daily/2019-07-26.md
+++ b/daily/2019-07-26.md
@@ -49,10 +49,8 @@ for (let i = 0; i < 9; i++) {
 let i = 81;
 
 while (i-- > 0) {
-  const a = (i / 9) >> 0;
-  const b = (i % 9);
-  if (a % 3 !== b % 3) {
-    console.log(`${a + 1}, ${b + 1}`);
+  if (((i / 9) >> 0) % 3 !== (i % 9) % 3) {
+    console.log(`${((i / 9) >> 0) + 1}, ${(i % 9) + 1}`);
   }
 }
 ```
