feat: #98: add C++ implementation (#68)

--- a/problems/98.validate-binary-search-tree.md
+++ b/problems/98.validate-binary-search-tree.md
@@ -36,8 +36,16 @@ Explanation: The root node's value is 5 but its right child's value is 4.
 ```
 
 ## 思路
+### 中序遍历
 这道题是让你验证一棵树是否为二叉查找树（BST）。 由于中序遍历的性质`如果一个树遍历的结果是有序数组，那么他也是一个二叉查找树(BST)`,
 我们只需要中序遍历，然后两两判断是否有逆序的元素对即可，如果有，则不是BST，否则即为一个BST。
+
+### 定义法
+根据定义，一个结点若是在根的左子树上，那它应该小于根结点的值而大于左子树最大值；若是在根的右子树上，那它应该大于根结点的值而小于右子树最小值。也就是说，每一个结点必须落在某个取值范围：
+1. 根结点的取值范围为（考虑某个结点为最大或最小整数的情况）：(long_min, long_max)
+2. 左子树的取值范围为：(current_min, root.value)
+3. 右子树的取值范围为：(root.value, current_max)
+
 ## 关键点解析
 
 - 二叉树的基本操作（遍历）
@@ -45,7 +53,10 @@ Explanation: The root node's value is 5 but its right child's value is 4.
 - 如果一个树遍历的结果是有序数组，那么他也是一个二叉查找树(BST)
 
 ## 代码
+### 中序遍历
+* 语言支持：JS
 
+JavaScript Code：
 ```js
 /*
  * @lc app=leetcode id=98 lang=javascript
@@ -94,7 +105,67 @@ var isValidBST = function(root) {
 };
 
 ```
+### 定义法
+* 语言支持：C++
 
+C++ Code：
+```C++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+// 递归
+class Solution {
+public:
+    bool isValidBST(TreeNode* root) {
+        return helper(root, LONG_MIN, LONG_MAX);
+    }
+private:
+    bool helper(const TreeNode* root, long min, long max) {
+        if (root == nullptr) return true;
+        if (root->val >= max || root->val <= min) return false;
+        return helper(root->left, min, root->val) && helper(root->right, root->val, max);
+    }
+};
+
+// 循环
+class Solution {
+public:
+    bool isValidBST(TreeNode* root) {
+        if (root == nullptr) return true;
+        auto ranges = queue<pair<long, long>>();
+        ranges.push(make_pair(LONG_MIN, LONG_MAX));
+        auto nodes = queue<const TreeNode*>();
+        nodes.push(root);
+        while (!nodes.empty()) {
+            auto sz = nodes.size();
+            for (auto i = 0; i < sz; ++i) {
+                auto range = ranges.front();
+                ranges.pop();
+                auto n = nodes.front();
+                nodes.pop();
+                if (n->val >= range.second || n->val <= range.first) {
+                    return false;
+                }
+                if (n->left != nullptr) {
+                    ranges.push(make_pair(range.first, n->val));
+                    nodes.push(n->left);
+                }
+                if (n->right != nullptr) {
+                    ranges.push(make_pair(n->val, range.second));
+                    nodes.push(n->right);
+                }
+            }
+        }
+        return true;
+    }
+};
+```
 ## 相关题目
 
 [230.kth-smallest-element-in-a-bst](./230.kth-smallest-element-in-a-bst.md)
